--- a/cloud-gateway/pom.xml
+++ b/cloud-gateway/pom.xml
@@ -2,18 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent> 
-		
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.5</version>
+		<version>2.4.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.PFA</groupId>
-	<artifactId>could-gateway</artifactId>
+	<artifactId>cloud-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>could-gateway</name>
-	<description>server:   port: 9002 spring:     application:         name: ADMIN-SERVICE eureka:     client:         register-with-eureka: true         fetch-registry: true         service-url:             defaultZone: http://localhost:8761/eureka/     instance:         hostname: localhost        </description>
+	<name>cloud-gateway</name>
+	<description>cloud-gateway</description>
 	<properties>
 		<java.version>16</java.version>
 		<spring-cloud.version>2020.0.2</spring-cloud.version>
@@ -23,6 +22,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<!--<scope>provided</scope>-->
+		</dependency>
+	
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
